# 9_3

./: CMakeLists.txt  HomeWorkPatterns-3.cpp  Log_comand.h  Log_console.cpp  Log_console.h  Log_file.cpp  Log_file.h  Log_message.cpp  Log_message.h  Observed.cpp  Observed.h  Observers.cpp  Observers.h  README.md
